--- a/src/css/application.css
+++ b/src/css/application.css
@@ -1,6 +1,7 @@
 * {
 	margin:0;
 	padding:0;
+	font-family: serif, sans-serif;
 }
 ul,li {
 	list-style-type: none;
@@ -8,7 +9,7 @@ ul,li {
 a, a:hover, a:active, a:focus, a:visited {
   text-decoration: none; 
   color: #fff;
-  font-weight: bolder;
+  
 }
 a:hover {
 	color:#fff;
@@ -37,31 +38,70 @@ a:hover {
 }
 .nav-manu {
 	display: none;
+	position: absolute;
 	z-index: 1;
 	padding-left: 10px;
+	background-color: #ee36f7;
+	width: 100%;
 	line-height: 1.5em;
-	font-size: 30px;
+	font-size: 25px;
 
 }
 .nav-manu a {
 	color: #00FFFF;
 	text-transform: uppercase;
 }
+#section1 {
+	background-color: #3639f7;
+	padding:40px 0;
+}
+.tech-mentor h1 {
+	text-align: center;
+}
+.tech-mentor p{
+	text-align: justify;
+	font-size: 20px;
+}
+#login-form {
+	width: 100%;
+	height: 250px;
+	background-color: #fff;
+	padding:10px 20px;
+	margin: 10px 10px;
+	box-shadow: 4px 4px;
+	border-radius: 5px;
+}
+#login-form a{
+	color: blue;
+}
+.head-login {
+	 background: linear-gradient(to right, #ff3300 20%,#ff9900 100%);
+	box-shadow: 2px 2px;
+	border-radius: 2px;
+	height: 60px;
+	margin-top: -38px;
+	padding: 10px 15px;
+}
+.button-login {
+	background-color: #ca36f7;
+	margin-top: 10px;
+	float: right;
+}
+
 
 @media screen and (min-device-width: 769px) {
 	.nav-manu {
-		display: flex;
+		display:inline-flex;
 		flex-direction: row;
-		float: right;
-		margin-top: -52px;
-		margin-right: 10px;
-		font-size: 22px;
+		justify-content: flex-end; 
+		font-size: 20px;
+		padding-right: 10px;
+		margin-top: -50px;
+		width: 75%;
+		right:0px;
 	}
-	.nav-manu a {
+	.nav-manu li {
 		padding-right: 15px;
-		border-bottom: 3px solid #00FFFF;
-		color: #00FFFF;
-		padding-bottom: 20px;
 	}
 	.hamgurger {
 		display: none;
