--- a/dest/css/application.css
+++ b/dest/css/application.css
@@ -26,8 +26,11 @@ a:hover {
 	font-weight: 30px;
 }
 #main-nav {
-	background-color: #ee36f7;
-	padding-top: 20px;
+	background-image: url("../img/mod image.jpeg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	height: auto;
+	padding: 50px 10px;
 }
 .hamgurger {
 	float: right;
@@ -40,8 +43,9 @@ a:hover {
 	display: none;
 	position: absolute;
 	z-index: 1;
-	padding-left: 10px;
-	background-color: #ee36f7;
+	padding:10px 20px;
+	margin-left: -10px;
+	background-color: #66c2ff;
 	width: 100%;
 	line-height: 1.5em;
 	font-size: 25px;
@@ -50,6 +54,7 @@ a:hover {
 .nav-manu a {
 	color: #00FFFF;
 	text-transform: uppercase;
+	padding-right: 50px;
 }
 #section1 {
 	background-color: #3639f7;
@@ -84,9 +89,46 @@ a:hover {
 }
 .button-login {
 	background-color: #ca36f7;
-	margin-top: 10px;
+	margin-top: -25px;
 	float: right;
 }
+#content-mod {
+	margin-top: 0px;
+	padding: 20px 20px;
+	text-align: center;
+}
+.font-set {
+	font-size: 50px;
+}
+#exampleModalLabel {
+	margin-left: 150px;
+	font-size: 25px;
+}
+#reset-pass {
+	background-color: #ca36f7;
+	margin-right: 176px;
+	width: 100px;
+	height: 40px;
+	border-radius: 5px;
+}
+
+/*-------------start about -------------------------------*/
+.slide-left-head{
+	background-color: #f0f0f5;
+	padding: 20px 20px;
+	box-shadow: 3px 3px;
+}
+
+/*-------------// end about -------------------------------*/
+
+
+
+
+
+
+
+
+
 
 
 @media screen and (min-device-width: 769px) {
@@ -99,11 +141,16 @@ a:hover {
 		margin-top: -50px;
 		width: 75%;
 		right:0px;
+		background-color: transparent;
 	}
 	.nav-manu li {
 		padding-right: 15px;
+
 	}
 	.hamgurger {
 		display: none;
+	}
+	#content-mod  {
+		margin-top: 0px;
 	}
 }
