--- a/dest/css/application.css
+++ b/dest/css/application.css
@@ -113,12 +113,34 @@ a:hover {
 }
 
 /*-------------start about -------------------------------*/
-.slide-left-head{
-	background-color: #f0f0f5;
-	padding: 20px 20px;
-	box-shadow: 3px 3px;
+#slide-head {
+	padding: 20px 10px;
 }
+.slide-left {
+	
+	box-shadow: 3px 2px #f5f5f5;
+}
+.logo-slide {
+	background-image: url("../img/TECHLOGO.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	width: 220px;
+	height: 30px;
+	padding-left: 10px;
+	z-index: 0;
+	color: transparent;
+	font-weight: 30px;
 
+}
+.slide-ul {
+	line-height: 2.9em;
+	padding-left: 25px;
+	font-size: 20px;
+	font-weight: 100;
+}
+.slide-ul a{
+	color: #000;
+}
 /*-------------// end about -------------------------------*/
 
 
